# bilbycast-gateway-sdk

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.commercial  NOTICE  README.md
docs/: writing-a-gateway.md
src/: auth.rs  config.rs  dispatch.rs  emit.rs  envelope.rs  errors.rs  events.rs  lib.rs  proxy.rs  tls.rs  wizards.rs  ws_client.rs
tests/: integration_mock_manager.rs  proxy.rs
