[package]
name = "bilbycast-gateway-sdk"
version = "0.3.0"
edition = "2021"
license = "AGPL-3.0-or-later"
description = "SDK for building 3rd-party device gateway sidecars that integrate with bilbycast-manager"
publish = false

[dependencies]
tokio = { version = "1.52.1", features = ["full"] }
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
rustls = "0.23.39"
webpki-roots = "1.0.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tracing = "0.1.44"
chrono = { version = "0.4.44", features = ["serde"] }
anyhow = "1.0.102"
async-trait = "0.1.89"
tokio-util = { version = "0.7.18", features = ["rt"] }
futures-util = "0.3.32"
thiserror = "2.0.18"
url = "2.5.8"
bytes = "1.11.1"
sha2 = "0.11.0"
hex = "0.4.3"
toml = "1.1.2"

[dev-dependencies]
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tempfile = "3.27.0"
